--- a/force-app/main/default/lwc/opportunityWidget/opportunityWidget.html
+++ b/force-app/main/default/lwc/opportunityWidget/opportunityWidget.html
@@ -43,7 +43,7 @@
                                 <div>
                                     <lightning-input type="checkbox" value={obj.Id} name={obj.Id}
                                         data-check={obj.Id} data-key="singleSelectColumnCheckbox"
-                                        onchange={handleTodoChange}>
+                                        onchange={updateOpportunity}>
                                     </lightning-input>
                                 </div>
                             </th>
